--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
     border-radius: 10px;
     background-color: #ffffff;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    width: 38rem;
+    width: 30rem;
     height: 80px;
     border: 1px solid #ccc;
 }
@@ -18,7 +18,7 @@ body {
     border-radius: 10px;
     background-color: #ffffff;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    width: 38rem;
+    width: 30rem;
     height: auto;
     border: 1px solid #ccc;
 }
@@ -120,4 +120,9 @@ body {
 .post-btn {
     width: 100%;
     border-radius: 20px;
+}
+
+.completed {
+    text-decoration: line-through;
+    color: #888;
 }
